--- a/Texto base.html
+++ b/Texto base.html
@@ -5,7 +5,7 @@
     <title>barbearia alura </title>
     </head>
     <body>
-    <hi>Sobre a Barbearia Alura<hi>
+    <hi>Sobre a Barbearia Alura</hi>
 
 <p>Localizada no coracao da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que ha de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura ja e destaque na cidade e conquista novos clientes a cada dia.</p>
 
