--- a/Texto base.html
+++ b/Texto base.html
@@ -3,14 +3,24 @@
 <head>
   <meta charset="UTF-8">
     <title>barbearia alura</title>
+    <link rel="stylesheet" href="canpecino">
     </head>
-    <body>
-    <h1>Sobre a Barbearia Alura</h1>
-
+   
+  <body>
+   </header>
+    <h1 class="titulo-principal">barbearia alura</h1>
+  </heade>
+  <img id="banner" src="banner-jpg
+  <div class="pricipal">
+    <h2 class="titulo-centralizado"> sobre a barbearia alura </h2>
 <p>Localizada no coracao da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que ha de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura ja e destaque na cidade e conquista novos clientes a cada dia.</p>
 
-<p><em>Nossa missao e: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+<p id="missao"><em>Nossa missao e: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
 <p>Oferecemos profissionais experientes e antenados as mudancas no mundo da moda. O atendimento possui padrao de excelencia e agilidade, garantindo qualidade e satisfacao dos nossos clientes.</p>
-</body>
+</div>
+
+  <div>
+  <h3 class-"titulo-centralizado">beneficios</h3>
+  </body>
 </html> 
