--- a/Texto base.html
+++ b/Texto base.html
@@ -21,6 +21,6 @@
 </div>
 
   <div>
-  <h3 class-"titulo-centralizado">beneficios</h3>
+  <h3 class-"titulo=centralizado">beneficios</h3>
   </body>
 </html> 
