--- a/Texto base.html
+++ b/Texto base.html
@@ -22,5 +22,9 @@
 
   <div>
   <h3 class="titulo-centralizado">beneficios</h3>
+ <ul>
+   <li class=itens">atendimento aos clientes</li>li>
+   <li class=itens'espaco diferenciado</li>
+   
   </body>
 </html> 
